--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,8 +3,8 @@ requires = ["setuptools>=45", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "oven-compiler"
-version = "0.1.2"
+name = "oven-language"
+version = "0.1.3"
 description = "Python-to-MLIR compiler for GPU kernel development and mathematical computing"
 readme = "README.md"
 license = {file = "LICENSE"}
