--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,10 +4,10 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "oven-language"
-version = "0.1.3"
+dynamic = ["version"]
 description = "Python-to-MLIR compiler for GPU kernel development and mathematical computing"
 readme = "README.md"
-license = {file = "LICENSE"}
+license = {text = "MIT"}
 authors = [
     {name = "Sinjin Jeong", email = "sjjeong94@gmail.com"}
 ]
@@ -97,3 +97,6 @@ exclude_lines = [
     "class .*\\bProtocol\\):",
     "@(abc\\.)?abstractmethod",
 ]
+
+[tool.setuptools.dynamic]
+version = {attr = "oven.__version__"}
